header sticky project

--- a/Project-13-FaviconColor/index.html
+++ b/Project-13-FaviconColor/index.html
@@ -14,8 +14,8 @@
 
     <section class="container">
         <h1>تغییر رنگ Favicon</h1>
-        <button class="btn">قرمز</button>
-        <button class="btn">سبز</button>
+        <button class="btn" data="red">قرمز</button>
+        <button class="btn" data="green">سبز</button>
 
     </section>
 
