--- a/Project-19-SelectColorForBG/index.html
+++ b/Project-19-SelectColorForBG/index.html
@@ -11,6 +11,16 @@
 
 <body>
 
+    <select name="ColorBox" id="select-color">
+
+        <option value="">انتخاب رنگ</option>
+        <option value="red">قرمز</option>
+        <option value="blue">آبی</option>
+        <option value="yellow">زرد</option>
+        <option value="green">سبز</option>
+        <option value="black">مشکی</option>
+
+    </select>
 
     <script src="js/all.min.js"></script>
     <script src="js/script.js"></script>
